[gd_scene load_steps=17 format=3 uid="uid://bebj6ltb2dusn"]

[ext_resource type="Script" uid="uid://cn2nfmdik6f0v" path="res://scripts/player/input_manager.gd" id="1_krkoh"]
[ext_resource type="Theme" uid="uid://nhnax5rta2hu" path="res://custom_resources/amarante.tres" id="2_sspc1"]
[ext_resource type="Script" uid="uid://bty8228mbp4mr" path="res://scripts/player/deck.gd" id="3_6owpf"]
[ext_resource type="Texture2D" uid="uid://dlapp75shcsrg" path="res://cards/Deck.png" id="4_qwuef"]
[ext_resource type="Script" uid="uid://cm5fblon3lnjk" path="res://scripts/card_manager/monster_card_manager.gd" id="5_bsxgu"]
[ext_resource type="Script" uid="uid://dbpol38hmfa5t" path="res://scripts/card_manager/ingredient_card_manager.gd" id="6_h8t0o"]
[ext_resource type="PackedScene" uid="uid://v65sweb65wh" path="res://scenes/card/cardslot.tscn" id="7_lsviu"]
[ext_resource type="Texture2D" uid="uid://b1tx3ipc0rtl6" path="res://cards/Vacuum_boss.png" id="8_uw24h"]
[ext_resource type="Script" uid="uid://buewu6digva8u" path="res://scripts/battle_manager.gd" id="9_oytup"]
[ext_resource type="Script" uid="uid://waqufgaxshwe" path="res://scripts/cooking_mechanic.gd" id="10_8eucq"]
[ext_resource type="Script" uid="uid://bmnt8wfxfx4ec" path="res://scripts/temp_ui.gd" id="11_6owpf"]
[ext_resource type="PackedScene" uid="uid://do6s602x65ika" path="res://scenes/ui/battle_ui.tscn" id="11_gfgng"]
[ext_resource type="Texture2D" uid="uid://dvdm57iis6taf" path="res://art/pot.png" id="12_sspc1"]
[ext_resource type="Texture2D" uid="uid://c43e7w56dvsu2" path="res://art/ui_element/Buttons/buttons_2x.png" id="12_yxeuc"]
[ext_resource type="Script" uid="uid://nrqhns78ljqf" path="res://scripts/button/switch_hand.gd" id="13_aijqa"]
[ext_resource type="PackedScene" uid="uid://cddrlenmm4hcd" path="res://scenes/ui/recipe_book.tscn" id="14_x8w2e"]

[node name="NewBattle" type="Node2D"]

[node name="Player" type="Node2D" parent="."]

[node name="InputManager" type="Node2D" parent="Player" node_paths=PackedStringArray("battle_manager", "card_manager_reference", "deck_reference")]
script = ExtResource("1_krkoh")
battle_manager = NodePath("../../BattleManager")
card_manager_reference = NodePath("../../PlayerHand/MonsterCardManager")
deck_reference = NodePath("../../PlayerHand/Deck")

[node name="PlayerHealth" type="RichTextLabel" parent="Player"]
z_index = 1
offset_left = 343.0
offset_top = 1.0
offset_right = 521.0
offset_bottom = 30.0
theme = ExtResource("2_sspc1")
theme_override_font_sizes/normal_font_size = 20
text = "Player Health: 10"
vertical_alignment = 1

[node name="PlayerHand" type="Node2D" parent="."]

[node name="Deck" type="Node2D" parent="PlayerHand" node_paths=PackedStringArray("deck_left_num_text", "deck_sprite", "ingredient_card_manager")]
position = Vector2(910, 524)
script = ExtResource("3_6owpf")
deck_left_num_text = NodePath("DeckLeftNum")
deck_sprite = NodePath("DeckSprite2D")
ingredient_card_manager = NodePath("../IngredientCardManager")

[node name="DeckSprite2D" type="Sprite2D" parent="PlayerHand/Deck"]
z_index = 1
scale = Vector2(0.383333, 0.383333)
texture = ExtResource("4_qwuef")

[node name="DeckLeftNum" type="RichTextLabel" parent="PlayerHand/Deck"]
z_index = 2
offset_left = -25.0
offset_top = -26.0
offset_right = 29.0
offset_bottom = 28.0
theme = ExtResource("2_sspc1")
theme_override_font_sizes/normal_font_size = 32
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MonsterCardManager" type="Node2D" parent="PlayerHand" node_paths=PackedStringArray("input_manager", "battle_manager", "temp_ui")]
visible = false
z_index = 1
script = ExtResource("5_bsxgu")
input_manager = NodePath("../../Player/InputManager")
battle_manager = NodePath("../../BattleManager")
temp_ui = NodePath("../../UI")

[node name="IngredientCardManager" type="Node2D" parent="PlayerHand" node_paths=PackedStringArray("temp_ui")]
z_index = 1
script = ExtResource("6_h8t0o")
temp_ui = NodePath("../../UI")

[node name="BattleField" type="Node2D" parent="."]

[node name="Cardslots" type="Node2D" parent="BattleField"]
z_index = 1

[node name="Cardslot1" parent="BattleField/Cardslots" instance=ExtResource("7_lsviu")]
position = Vector2(439, 222)

[node name="Cardslot2" parent="BattleField/Cardslots" instance=ExtResource("7_lsviu")]
position = Vector2(309, 306)

[node name="Cardslot3" parent="BattleField/Cardslots" instance=ExtResource("7_lsviu")]
position = Vector2(308, 150)

[node name="Enemy" type="Node2D" parent="BattleField"]
position = Vector2(820, 220)

[node name="EnemySprite2D" type="Sprite2D" parent="BattleField/Enemy"]
z_index = 1
scale = Vector2(0.42, 0.42)
texture = ExtResource("8_uw24h")

[node name="EnemyHealth" type="RichTextLabel" parent="BattleField/Enemy"]
modulate = Color(0, 0, 0, 1)
z_index = 2
offset_left = 26.0
offset_top = -118.0
offset_right = 85.0
offset_bottom = -59.0
theme = ExtResource("2_sspc1")
text = "10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EnemyAttack" type="RichTextLabel" parent="BattleField/Enemy"]
modulate = Color(0, 0, 0, 1)
z_index = 2
offset_left = -75.0
offset_top = -108.0
offset_right = -35.0
offset_bottom = -68.0
theme = ExtResource("2_sspc1")
text = "3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BattleManager" type="Node2D" parent="." node_paths=PackedStringArray("battle_timer", "cardslot_1", "cardslot_2", "cardslot_3", "input_manager", "monster_card_manager", "enemy", "enemy_health_text", "enemy_attack_text", "player_health_text", "temp_ui", "temp_attack_message")]
script = ExtResource("9_oytup")
battle_timer = NodePath("BattleTimer")
cardslot_1 = NodePath("../BattleField/Cardslots/Cardslot1")
cardslot_2 = NodePath("../BattleField/Cardslots/Cardslot2")
cardslot_3 = NodePath("../BattleField/Cardslots/Cardslot3")
input_manager = NodePath("../Player/InputManager")
monster_card_manager = NodePath("../PlayerHand/MonsterCardManager")
enemy = NodePath("../BattleField/Enemy")
enemy_health_text = NodePath("../BattleField/Enemy/EnemyHealth")
enemy_attack_text = NodePath("../BattleField/Enemy/EnemyAttack")
player_health_text = NodePath("../Player/PlayerHealth")
temp_ui = NodePath("../UI")
temp_attack_message = NodePath("../UI/TempAttackMessage")

[node name="BattleTimer" type="Timer" parent="BattleManager"]
one_shot = true

[node name="CookingMechanic" type="Node2D" parent="." node_paths=PackedStringArray("battle_manager", "monster_card_manager", "temp_ui")]
script = ExtResource("10_8eucq")
battle_manager = NodePath("../BattleManager")
monster_card_manager = NodePath("../PlayerHand/MonsterCardManager")
temp_ui = NodePath("../UI")

[node name="UI" type="Control" parent="." node_paths=PackedStringArray("card_info_text", "pot_text")]
z_index = -10
layout_mode = 3
anchors_preset = 0
offset_right = 960.0
offset_bottom = 600.0
pivot_offset = Vector2(480, 300)
mouse_filter = 2
script = ExtResource("11_6owpf")
card_info_text = NodePath("CardInfoUI/RichTextLabel")
pot_text = NodePath("PotUI/RichTextLabel")

[node name="BattleUI" parent="UI" instance=ExtResource("11_gfgng")]
layout_mode = 1

[node name="CardInfoUI" type="Control" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="RichTextLabel" type="RichTextLabel" parent="UI/CardInfoUI"]
z_index = 5
layout_mode = 0
offset_left = 39.0
offset_top = 75.0
offset_right = 198.0
offset_bottom = 115.0

[node name="PotUI" type="Control" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Pot" type="NinePatchRect" parent="UI/PotUI"]
z_index = 1
layout_mode = 0
offset_left = 21.0
offset_top = 461.0
offset_right = 74.0
offset_bottom = 535.0
texture = ExtResource("12_sspc1")
region_rect = Rect2(228, 278, 767, 1146)

[node name="RichTextLabel" type="RichTextLabel" parent="UI/PotUI"]
z_index = 5
layout_mode = 0
offset_left = 88.0
offset_top = 462.0
offset_right = 204.0
offset_bottom = 502.0

[node name="Buttons" type="Control" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="EndTurnButton" type="Button" parent="UI/Buttons"]
z_index = 2
layout_mode = 0
offset_left = 837.0
offset_top = 410.0
offset_right = 947.0
offset_bottom = 447.0
focus_mode = 0
theme = ExtResource("2_sspc1")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "End Turn"
flat = true

[node name="NinePatchRect" type="NinePatchRect" parent="UI/Buttons/EndTurnButton"]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("12_yxeuc")
region_rect = Rect2(114, 4, 44, 26)
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="SwitchHandButton" type="Button" parent="UI/Buttons" node_paths=PackedStringArray("ingredient_card_manager", "monster_card_manager")]
z_index = 2
layout_mode = 0
offset_left = 226.0
offset_top = 464.0
offset_right = 269.0
offset_bottom = 504.0
focus_mode = 0
theme = ExtResource("2_sspc1")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 12
text = "Switch
Hand"
flat = true
script = ExtResource("13_aijqa")
ingredient_card_manager = NodePath("../../../PlayerHand/IngredientCardManager")
monster_card_manager = NodePath("../../../PlayerHand/MonsterCardManager")

[node name="NinePatchRect" type="NinePatchRect" parent="UI/Buttons/SwitchHandButton"]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("12_yxeuc")
region_rect = Rect2(114, 4, 44, 26)
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="CookButton" type="Button" parent="UI/Buttons"]
z_index = 2
layout_mode = 0
offset_left = 90.0
offset_top = 548.0
offset_right = 209.0
offset_bottom = 585.0
focus_mode = 0
theme = ExtResource("2_sspc1")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "Cook"
flat = true

[node name="NinePatchRect" type="NinePatchRect" parent="UI/Buttons/CookButton"]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("12_yxeuc")
region_rect = Rect2(114, 4, 44, 26)
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="RecipeButton" type="Button" parent="UI/Buttons"]
z_index = 2
layout_mode = 0
offset_left = 18.0
offset_top = 548.0
offset_right = 81.0
offset_bottom = 585.0
focus_mode = 0
theme = ExtResource("2_sspc1")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Recipe"
flat = true

[node name="NinePatchRect" type="NinePatchRect" parent="UI/Buttons/RecipeButton"]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("12_yxeuc")
region_rect = Rect2(114, 4, 44, 26)
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="GameConditions" type="Control" parent="UI"]
anchors_preset = 0
mouse_filter = 2

[node name="WinCondition" type="RichTextLabel" parent="UI/GameConditions"]
visible = false
z_index = 100
layout_mode = 0
offset_left = 125.0
offset_top = 189.0
offset_right = 885.0
offset_bottom = 379.0
theme = ExtResource("2_sspc1")
theme_override_colors/default_color = Color(0.690196, 0.788235, 0, 1)
theme_override_font_sizes/normal_font_size = 130
text = "YOU WIN !!!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LoseCondition" type="RichTextLabel" parent="UI/GameConditions"]
visible = false
z_index = 100
layout_mode = 0
offset_left = 125.0
offset_top = 189.0
offset_right = 885.0
offset_bottom = 379.0
theme = ExtResource("2_sspc1")
theme_override_colors/default_color = Color(0.690196, 0.247059, 0, 1)
theme_override_font_sizes/normal_font_size = 130
text = "YOU LOSE !!!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RecipeBook" parent="UI" instance=ExtResource("14_x8w2e")]
z_index = 15
layout_mode = 1

[node name="TempAttackMessage" type="RichTextLabel" parent="UI"]
visible = false
layout_mode = 0
offset_left = 421.0
offset_top = 410.0
offset_right = 725.0
offset_bottom = 450.0
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 24
text = "Press SPACE to Attack"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="UI/Buttons/EndTurnButton" to="BattleManager" method="_on_end_turn_button_pressed"]
[connection signal="pressed" from="UI/Buttons/SwitchHandButton" to="UI/Buttons/SwitchHandButton" method="_on_switch_hand"]
[connection signal="pressed" from="UI/Buttons/CookButton" to="CookingMechanic" method="_on_cook"]
[connection signal="pressed" from="UI/Buttons/RecipeButton" to="UI/RecipeBook" method="_on_recipe_book_button_pressed"]
